<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2016 The CyanogenMod Project
               (C) 2017 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Category title -->
    <string name="graphics_title">Graphics</string>
    <string name="buttons_title">Hadware buttons</string>

    <!-- Application title -->
    <string name="device_settings_app_name">Device features</string>
    <string name="summary_device_settings">Features specific to your device</string>

    <!-- Button settings -->
    <string name="button_panel_title">Device features</string>
    <string name="additional_buttons_title">Additional buttons</string>

    <!-- Vibrator -->
    <string name="vibrator_category">Vibrator</string>
    <string name="vibrator_title">Strength</string>
    <string name="vibrator_summary">Define the strength of the vibrator</string>

     <!-- Kcal -->
    <string name="kcal_title">Display color</string>
    <string name="kcal_summary">Display color calibration using KCAL</string>
    <string name="kcal_enabled_title">Enable KCAL</string>
    <string name="kcal_enabled_summary">Turn on display calibration using KCAL</string>
    <string name="kcal_red">Red</string>
    <string name="kcal_green">Green</string>
    <string name="kcal_blue">Blue</string>
    <string name="kcal_saturation">Saturation</string>
    <string name="kcal_contrast">Contrast</string>
    <string name="menu_reset">Reset</string>

    <!-- Notification LED -->
    <string name="notification_category">Notification LED</string>
    <string name="notification_title">Brightness</string>
    <string name="notification_summary">Define the brightness of the LED</string>

    <!-- Torch LED -->
    <string name="torch_category">Camera LED</string>
    <string name="torch_yellow_title">Yellow brightness</string>
    <string name="torch_yellow_summary">Define the brightness of the yellow LED</string>
    <string name="torch_white_title">White brightness</string>
    <string name="torch_white_summary">Define the brightness of the white LED</string>

  <!-- Governor Profiles -->
    <string name="governor_profile_title">Performance tuner</string>
    <string name="governor_title">Performance Settings</string>
    <string name="governor_summary">Choose your performance settings</string>
    <string name="governor_dialogTitle">Choose your performance settings</string>
</resources>
