<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016 The CyanogenMod Project
               (C) 2017-2018 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/buttons_title">
    <SwitchPreference
        android:key="button_swap"
        android:title="@string/button_swap_title"
        android:summary="@string/button_swap_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/torch_category">
        <org.lineageos.settings.device.TorchYellowBrightnessPreference
            android:key="torch_yellow_key"
            android:iconSpaceReserved="true"
            android:title="@string/torch_yellow_title"
            android:summary="@string/torch_yellow_summary" />
        <org.lineageos.settings.device.TorchWhiteBrightnessPreference
            android:key="torch_white_key"
            android:iconSpaceReserved="true"
            android:title="@string/torch_white_title"
            android:summary="@string/torch_white_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notification_category">
        <org.lineageos.settings.device.NotificationBrightnessPreference
            android:key="notification_key"
            android:iconSpaceReserved="true"
            android:title="@string/notification_title"
            android:summary="@string/notification_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/vibrator_category">
        <org.lineageos.settings.device.VibratorStrengthPreference
            android:key="vibrator_key"
            android:title="@string/vibrator_title"
            android:iconSpaceReserved="true"
            android:summary="@string/vibrator_summary" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/graphics_title">
     <PreferenceScreen
            android:key="kcal"
            android:fragment="org.lineageos.settings.device.DisplayCalibration"
            android:iconSpaceReserved="true"
            android:summary="@string/kcal_summary"
            android:title="@string/kcal_title" />
     </PreferenceCategory>

    <PreferenceCategory
        android:key="governor_profile"
        android:title="@string/governor_profile_title" >

		<ListPreference
			android:key="governor"
			android:title="@string/governor_title"
                        android:iconSpaceReserved="true"
			android:summary="@string/governor_summary"
			android:defaultValue="2"
			android:entries="@array/governor_profiles"
			android:entryValues="@array/governor_values"
			android:dialogTitle="@string/governor_dialogTitle" />

    </PreferenceCategory>

</PreferenceScreen>
